# linux-healthy-agent-with-feishu-hooks

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
examples/: linux-healthy-agent-alert-thresholds.json
examples/systemd/: linux-healthy-agent.service  linux-healthy-agent.timer
scripts/: install.sh
src/: checks.rs  docker.rs  gpu.rs  identity.rs  lib.rs  main.rs  model.rs  procfs.rs
tests/: probe_rules.rs
