[package]
name = "linux-healthy-agent"
version = "0.1.2"
edition = "2021"
description = "Read-only low-overhead Linux health agent with Feishu webhook alerts"
license = "MIT"
repository = "https://github.com/lauzhihao/linux-healthy-agent-with-feishu-hooks"
readme = "README.md"
keywords = ["linux", "monitoring", "healthcheck", "feishu", "gpu"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.12", default-features = false, features = ["json", "tls"] }
wait-timeout = "0.2"
